--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,13 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "Build Bot",
+			"group": "build",
 			"type": "typescript",
 			"tsconfig": "tsconfig.json",
 			"problemMatcher": [
 				"$tsc"
-			],
-			"group": "build",
-			"label": "build ts"
+			]
 		}
 	]
 }
