--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "moduleResolution": "node",
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "sourceMap": true
     }
 }
