--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,7 @@
 		"no-shadow": ["warn", { "allow": ["err", "resolve", "reject"] }],
         "no-trailing-spaces": ["warn"],
 		"no-unused-labels": "warn",
-        "no-unused-vars": "warn",
+        "no-unused-vars": "off",
 		"no-var": "warn",
 		"object-curly-spacing": ["warn", "always"],
 		"prefer-const": "warn",
@@ -83,11 +83,15 @@
 			],
 			"rules": {
 				"jsdoc/require-jsdoc": "off",
-				"prefer-const": "warn",
+				"jsdoc/require-param": "off",
+				"jsdoc/require-returns": "off",
+  				"@typescript-eslint/no-unused-vars": "off",
+				"object-curly-spacing": "off",
+				"@typescript-eslint/object-curly-spacing": ["warn", "always"],
 				"semi": "off",
 				"@typescript-eslint/semi": "warn",
 				"@typescript-eslint/no-extra-semi": "warn",
-				"comma-dange": "off",
+				"comma-dangle": "off",
 				"@typescript-eslint/comma-dangle": ["warn", "always-multiline"],
 				"no-shadow": "off",
 				"@typescript-eslint/no-shadow": ["warn", { "allow": ["err", "resolve", "reject"] }],
