--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "strictNullChecks": true,
         "allowSyntheticDefaultImports": true,
         "resolveJsonModule": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "esModuleInterop": true
     }
 }
