--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "npx eslint ."
   },
   "dependencies": {
+    "canvas": "^2.8.0",
     "chalk": "^4.1.1",
     "discord.js": "^12.5.3"
   },
