--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node --experimental-json-modules .",
     "dev": "npx nodemon",
     "lint": "npx eslint .",
-    "build": "npx tsc"
+    "build": "npx rimraf ./dist/ && npx tsc"
   },
   "dependencies": {
     "chalk": "^4.1.1",
@@ -24,6 +24,7 @@
     "eslint": "^7.26.0",
     "eslint-plugin-jsdoc": "^34.2.0",
     "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
