--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "rootDir": "./src/",
-        "outDir": "./dist/",
+        "rootDir": "./src/ts/",
+        "outDir": "./dist/js/",
         "allowJs": true,
         "module": "ESNext",
         "target": "ESNext",
@@ -11,5 +11,6 @@
         "resolveJsonModule": true,
         "sourceMap": true,
         "esModuleInterop": true
-    }
+    },
+    "include": ["./src/ts/**/*"]
 }
